--- a/new_pages/errors.qmd
+++ b/new_pages/errors.qmd
@@ -117,7 +117,7 @@ ggplot() scale_fill_manual() values = c("orange", "purple") ... insufficient for
 ```
 Can't add x object
 ```
-You probably have an extra `+` at the end of a ggplot command that you need to delete.
+This is likely a ggplot error from the use of `scale_fill_manual()`, where you have not provided enough colors for the number of unique values. If the column is class factor, consider whether `NA` is a factor level.
 
 
 ### R Markdown errors {.unnumbered}  
