--- a/new_pages/stat_tests.qmd
+++ b/new_pages/stat_tests.qmd
@@ -241,7 +241,7 @@ Many many more functions and statistical tests can be run with **rstatix** funct
 
 
 
-## `gtsummary` package {#stats_gt}
+## **`gtsummary`** package {#stats_gt}
 
 Use **gtsummary** if you are looking to add the results of a statistical test to a pretty table that was created with this package (as described in the **gtsummary** section of the [Descriptive tables](tables_descriptive.qmd#tbl_gt) page).  
 
@@ -313,8 +313,6 @@ linelist %>%
 
 
 ```
-
-
 
 
 <!-- ## `dplyr` package {} -->
