--- a/old_bookdown/new_pages/collaboration.Rmd
+++ b/old_bookdown/new_pages/collaboration.Rmd
@@ -671,7 +671,7 @@ you were working on.
 *PULL* - First, click the "Pull" icon (downward arrow) which fetches and
 pulls at the same time.
 
-*PUSH* - Clicking the green "Pull" icon (upward arrow). You may be asked
+*PUSH* - Clicking the green "Push" icon (upward arrow). You may be asked
 to enter your Github username and password. The first time you are
 asked, you may need to enter two Git command lines into the *Terminal*:
 
@@ -729,9 +729,9 @@ knitr::include_graphics(here::here("images", "github_desktop_push_button.png"))
 Without surprise, the commands are *fetch*, *pull* and *push*.
 
 ```{bash, eval = FALSE}
-git fetch  # are there new commits in the remote directory?
+git fetch  # Are there new commits in the remote directory?
 git pull   # Bring remote commits into your local branch
-git push   # Puch local commits of this branch to the remote branch
+git push   # Push local commits of this branch to the remote branch
 ```
 
 
