Further changes to chapters

--- a/new_pages/collaboration.qmd
+++ b/new_pages/collaboration.qmd
@@ -15,7 +15,7 @@ and most used options for version control.
 background routinely learn to use version control software (Git,
 Mercurial, Subversion or others), few of us from
 quantitative disciplines are taught these skills. Consequently, most epidemiologists never
-hear of it during their studies, and have to learn it on the fly.
+hear of it during their studies, and have to learn it on the job.
 
 **Wait, I heard of Github, is it the same?** - Not exactly, but you
 often use them together, and we will show you how to. In short:
@@ -42,25 +42,25 @@ computer, and remotely on a **Github** server.
 Using **Git** facilitates:
 
 1)  Archiving documented versions with incremental changes so that you
-    can easily revert backwards to any previous state
+    can easily revert backwards to any previous state.
 2)  Having parallel *branches*, i.e. developing/"working" versions with
-    structured ways to integrate the changes after review
+    structured ways to integrate the changes after review.
 
 This can be done locally on your computer, even if you don't collaborate
 with other people. Have you ever:
 
--   regretted having deleted a section of code, only to realize two
+-   Regretted having deleted a section of code, only to realize two
     months later that you actually needed it?
 
 
--   come back on a project that had been on pause and attempted to
+-   Come back on a project that had been on pause and attempted to
     remember whether you had made that tricky modification in one of the
     models?
 
--   had a *file model_1.R* and another file *model_1\_test.R* and a file
+-   Had a *file model_1.R* and another file *model_1\_test.R* and a file
     *model_1\_not_working.R* to try things out?
 
--   had a file *report.Rmd*, a file *report_full.Rmd*, a file
+-   Had a file *report.Rmd*, a file *report_full.Rmd*, a file
     *report_true_final.Rmd*, a file *report_final_20210304.Rmd*, a file
     *report_final_20210402.Rmd* and cursed your archiving skills?
 
