Upates to rmarkdown chapter

--- a/new_pages/rmarkdown.qmd
+++ b/new_pages/rmarkdown.qmd
@@ -39,15 +39,15 @@ In sum, the process that happens *in the background* (you do not need to know al
 knitr::include_graphics(here::here("images", "markdown/0_rmd.png"))
 ```
 
-(source: https://rmarkdown.rstudio.com/authoring_quick_tour.html):
+[Source](https://rmarkdown.rstudio.com/authoring_quick_tour.html).
 
 **Installation**
 
 To create a R Markdown output, you need to have the following installed:
 
-* The **rmarkdown** package (**knitr** will also be installed automatically)  
+* The **rmarkdown** package (**knitr** will also be installed automatically).  
 * Pandoc, which should come installed with RStudio. If you are not using RStudio, you can download Pandoc here: http://pandoc.org. 
-* If you want to generate PDF output (a bit trickier), you will need to install LaTeX. For R Markdown users who have not installed LaTeX before, we recommend that you install TinyTeX (https://yihui.name/tinytex/). You can use the following commands: 
+* If you want to generate PDF output (a bit trickier), you will need to install LaTeX. For R Markdown users who have not installed LaTeX before, we recommend that you install [TinyTeX](https://yihui.name/tinytex/). You can use the following commands: 
 
 ```{r, eval=F}
 pacman::p_load(tinytex)     # install tinytex package
@@ -73,7 +73,7 @@ In RStudio, open a new R markdown file, starting with ‘File’, then ‘New fi
 knitr::include_graphics(here::here("images", "markdown/1_gettingstarted.png"))
 ```
 
-R Studio will give you some output options to pick from. In the example below we select "HTML" because we want to create an html document. The title and the author names are not important. If the output document type you want is not one of these, don't worry - you can just pick any one and change it in the script later. 
+R Studio will give you some output options to pick from. In the example below we select "HTML" because we want to create an html document. The title and the author names are not important. If the output document type you want is not one of these, don't worry - you can just pick any one and change it in the script later. If you want to use the current date everytime you render the document, such as for an automated report, you can click "Use current date when rendering document", but this can also be updated later.
 
 ```{r out.width = "50%", fig.align = "center", echo=F}
 knitr::include_graphics(here::here("images", "markdown/1_gettingstartedB.png"))
@@ -119,7 +119,7 @@ knitr::include_graphics(here::here("images", "markdown/rmarkdown_translation.png
 
 ### YAML metadata {.unnumbered}
 
-Referred to as the ‘YAML metadata’ or just ‘YAML’, this is at the top of the R Markdown document. This section of the script will tell your Rmd file what type of output to produce, formatting preferences, and other metadata such as document title, author, and date. There are other uses not mentioned here (but referred to in ‘Producing an output’). Note that indentation matters; tabs are not accepted but spaces are. 
+Referred to as the ‘YAML metadata’ or just ‘YAML’, this is at the top of the R Markdown document. This section of the script will tell your Rmd file what type of output to produce, formatting preferences, and other metadata such as document title, author, and date. There are other uses not mentioned here (but referred to in [Producing the document](rmarkdown.qmd#producing-the-document). Note that indentation matters; tabs are not accepted but spaces are. 
 
 This section must begin with a line containing just three dashes `---` and must close with a line containing just three dashes `---`. YAML parameters comes in `key:value` pairs. The placement of colons in YAML is important - the `key:value` pairs are separated by colons (not equals signs!).  
 
@@ -140,11 +140,11 @@ In the image above, because we clicked that our default output would be an html 
 
 This is the narrative of your document, including the titles and headings. It is written in the "markdown" language, which is used across many different software.  
 
-Below are the core ways to write this text. See more extensive documentation available on R Markdown "cheatsheet" at the [RStudio website](https://rstudio.com/resources/cheatsheets/).  
+Below are the core ways to write this text. See more extensive documentation available on R Markdown "cheatsheet" at the [RStudio website](https://posit.co/blog/the-r-markdown-cheat-sheet/).  
 
 #### New lines {.unnumbered}  
 
-Uniquely in R Markdown, to initiate a new line, enter *two spaces** at the end of the previous line and then Enter/Return.  
+Uniquely in R Markdown, to initiate a new line, enter *two spaces* at the end of the previous line and then Enter/Return.  
 
 
 
@@ -152,9 +152,9 @@ Uniquely in R Markdown, to initiate a new line, enter *two spaces** at the end o
 
 Surround your normal text with these character to change how it appears in the output.  
 
-* Underscores (`_text_`) or single asterisk (`*text*`) to _italicise_
-* Double asterisks (`**text**`) for **bold text**
-* Back-ticks (````text````) to display text as code  
+* Underscores (`_text_`) or single asterisk (`*text*`) to _italicise_.
+* Double asterisks (`**text**`) for **bold text**.
+* Back-ticks (````text````) to display text as code.  
 
 The actual appearance of the font can be set by using specific templates (specified in the YAML metadata; see example tabs).  
 
@@ -221,18 +221,18 @@ You can create a new chunk by typing it out yourself, by using the keyboard shor
 
 Some notes about the contents of the curly brackets `{ }`:
 
-*	They start with ‘r’ to indicate that the language name within the chunk is R
+*	They start with ‘r’ to indicate that the language name within the chunk is R.
 *	After the r you can optionally write a chunk "name" – these are not necessary but can help you organise your work. Note that if you name your chunks, you should ALWAYS use unique names or else R will complain when you try to render.  
 *	The curly brackets can include other options too, written as `tag=value`, such as:  
-  * `eval = FALSE` to not run the R code  
-  * `echo = FALSE` to not print the chunk's R source code in the output document  
-  * `warning = FALSE` to not print warnings produced by the R code  
-  * `message = FALSE` to not print any messages produced by the R code  
-  * `include =` either TRUE/FALSE whether to include chunk outputs (e.g. plots) in the document
-  * `out.width = ` and `out.height =` - provide in style `out.width = "75%"`  
-  * `fig.align = "center"` adjust how a figure is aligned across the page  
+  * `eval = FALSE` to not run the R code.  
+  * `echo = FALSE` to not print the chunk's R source code in the output document.  
+  * `warning = FALSE` to not print warnings produced by the R code.  
+  * `message = FALSE` to not print any messages produced by the R code.  
+  * `include =` either TRUE/FALSE whether to include chunk outputs (e.g. plots) in the document.
+  * `out.width = ` and `out.height =` - provide in style `out.width = "75%"`.  
+  * `fig.align = "center"` adjust how a figure is aligned across the page.  
   * `fig.show='hold'` if your chunk prints multiple figures and you want them printed next to each other (pair with `out.width = c("33%", "67%")`. Can also set as `fig.show='asis'` to show them below the code that generates them, `'hide'` to hide, or `'animate'` to concatenate multiple into an animation.  
-* A chunk header must be written in *one line*  
+* A chunk header must be written in *one line*. 
 * Try to avoid periods, underscores, and spaces. Use hyphens ( - ) instead if you need a separator.  
 
 Read more extensively about the **knitr** options [here](https://yihui.org/knitr/options/).  
@@ -320,7 +320,7 @@ Cell D   |Cell E    |Cell F
 
 ### Tabbed sections {.unnumbered}  
 
-For HTML outputs, you can arrange the sections into "tabs". Simply add `.tabset` in the curly brackets `{ }` that are placed *after a heading*. Any sub-headings beneath that heading (until another heading of the same level) will appear as tabs that the user can click through. Read more [here](https://bookdown.org/yihui/rmarkdown-cookbook/html-tabs.html)  
+For HTML outputs, you can arrange the sections into "tabs". Simply add `.tabset` in the curly brackets `{ }` that are placed *after a heading*. Any sub-headings beneath that heading (until another heading of the same level) will appear as tabs that the user can click through. Read more [here](https://bookdown.org/yihui/rmarkdown-cookbook/html-tabs.html).  
 
 
 
@@ -342,10 +342,10 @@ You can add an additional option `.tabset-pills` after `.tabset` to give the tab
 
 There are several ways to structure your R Markdown and any associated R scripts. Each has advantages and disadvantages:  
 
-* Self-contained R Markdown - everything needed for the report is imported or created within the R Markdown  
-  * Source other files - You can run external R scripts with the `source()` command and use their outputs in the Rmd  
-  * Child scripts - an alternate mechanism for `source()`  
-* Utilize a "runfile" - Run commands in an R script *prior to* rendering the R Markdown  
+* Self-contained R Markdown - everything needed for the report is imported or created within the R Markdown.  
+  * Source other files - You can run external R scripts with the `source()` command and use their outputs in the Rmd.  
+  * Child scripts - an alternate mechanism for `source()`.  
+* Utilize a "runfile" - Run commands in an R script *prior to* rendering the R Markdown.  
 
 
 ### Self-contained Rmd {.unnumbered}  
@@ -356,12 +356,12 @@ Everything you need to run the R markdown is imported or created within the Rmd 
 
 In this scenario, one logical organization of the R Markdown script might be:  
 
-1) Set global **knitr** options  
-2) Load packages  
-3) Import data  
-4) Process data  
-5) Produce outputs (tables, plots, etc.)  
-6) Save outputs, if applicable (.csv, .png, etc.)  
+1) Set global **knitr** options.  
+2) Load packages.  
+3) Import data.  
+4) Process data.  
+5) Produce outputs (tables, plots, etc.).  
+6) Save outputs, if applicable (.csv, .png, etc.). 
 
 #### Source other files {.unnumbered}
 
@@ -376,10 +376,41 @@ source("your-script.R", local = knitr::knit_global())
 
 Note that when using `source()` *within* the R Markdown, the external files will still be run *during the course of rendering your Rmd file*. Therefore, each script is run every time you render the report. Thus, having these `source()` commands *within* the R Markdown does not speed up your run time, nor does it greatly assist with de-bugging, as error produced will still be printed when producing the R Markdown.  
 
-An alternative is to utilize the `child = ` **knitr** option. EXPLAIN MORE TO DO
+An alternative is to utilize the `child = ` **knitr** option. 
+
+#### `child = `  {.unnumbered}
+
+If you have a very long R markdown document, with several distinct sections, you might want to create several smaller documents (referred to as child documents), and combine them into the finished report.
+
+This approach can be particularly useful if you want to have the option to include or omit certain sections or analyses when you re-run the R markdown document. For instance, for a daily update on an outbreak you may only want a rapid, streamlined, update, but for a weekly report you may want a more in depth analysis.
+
+For example, imagine you have a report that creates a summary of an outbreak, and every Sunday it runs additional analysis looking at the demographics of the outbreak. Here we will have our main R markdown file "main_report.Rmd", and the separate analysis in the file "demographic_analysis.Rmd".
+
+Here we have our document main_report.Rmd which runs the standard analysis, and we have an additional section where we will call the file demographic_analysis.Rmd. This is done by specifying the .Rmd file we want in an R code block. This allows us to use the function `knit_child()` from the **kintr** package to call the .Rmd file and knit it within our primary R markdown file.
+
+We have additionally included an `if()` and `ifelse()` statement to check if the day of the week (using the function `wday()` from the **lubridate** package) is Sunday, the day of the week we want the additional analysis to be run.
+
+```{r out.width = "100%", fig.align = "center", echo=F}
+knitr::include_graphics(here::here("images", "markdown/11_childdocument_call.png"))
+```
+
+If the day _is_ Sunday, then it will knit demographic_analysis.Rmd into the main document. 
+
+For example, the output when it is **not** Sunday.
+
+```{r out.width = "50%", fig.align = "center", echo=F}
+knitr::include_graphics(here::here("images", "markdown/12_notsundayanalysis.png"))
+```
+
+and when it **is** Sunday.
+
+```{r out.width = "50%", fig.align = "center", echo=F}
+knitr::include_graphics(here::here("images", "markdown/12_sundayanalysis.png"))
+```
+
+**Note: Your code chunks cannot share names between the main document and the child documents, or it wil not run.**
 
 You must be aware of various R *environments*. Objects created within an environment will not necessarily be available to the environment used by the R Markdown.  
-
 
 
 ### Runfile {.unnumbered}  
@@ -409,7 +440,7 @@ rmarkdown::render(input = "create_output.Rmd")   # Create Rmd file
 
 ### Folder strucutre {.unnumbered}  
 
-Workflow also concerns the overall folder structure, such as having an 'output' folder for created documents and figures, and 'data' or 'inputs' folders for cleaned data. We do not go into further detail here, but check out the [Organizing routine reports](reportfactory.qmd) page.  
+Workflow also concerns the overall folder structure, such as having an 'output' folder for created documents and figures, and 'data' or 'inputs' folders for cleaned data. We do not go into further detail here, but please refer to the [Organizing routine reports](reportfactory.qmd) page.  
 
 
 
@@ -556,10 +587,10 @@ rmarkdown::render(
 
 However, typing values into this pop-up window is subject to error and spelling mistakes. You may prefer to add restrictions to the values that can be entered through drop-down menus. You can do this by adding in the YAML several specifications for each `params: ` entry. 
 
-* `label: ` is how the title for that particular drop-down menu  
-* `value: ` is the default (starting) value  
-* `input: ` set to `select` for drop-down menu  
-* `choices: ` Give the eligible values in the drop-down menu  
+* `label: ` is the title for that particular drop-down menu.  
+* `value: ` is the default (starting) value.  
+* `input: ` set to `select` for drop-down menu.  
+* `choices: ` provide the eligible values in the drop-down menu.  
 
 Below, these specifications are written for the `hospital` parameter.  
 
@@ -729,7 +760,7 @@ HTML files do not use templates, but can have the styles configured within the Y
 
 * Table of contents: We can add a table of contents with `toc: true` below, and also specify that it remains viewable ("floats") as you scroll, with `toc_float: true`.
 
-* Themes: We can refer to some pre-made themes, which come from a Bootswatch theme library. In the below example we use cerulean. Other options include: journal, flatly, darkly, readable, spacelab, united, cosmo, lumen, paper, sandstone, simplex, and yeti. 
+* Themes: We can refer to some pre-made themes, which come from a [Bootswatch theme library](https://bootswatch.com/3/). In the below example we use cerulean. Other options include: journal, flatly, darkly, readable, spacelab, united, cosmo, lumen, paper, sandstone, simplex, and yeti. See [here](https://bootswatch.com/3/) for a full list of freely available themes. 
 
 * Highlight: Configuring this changes the look of highlighted text (e.g. code within chunks that are shown). Supported styles include default, tango, pygments, kate, monochrome, espresso, zenburn, haddock, breezedark, and textmate.  
 
@@ -781,11 +812,11 @@ If your dataset is very large, consider only showing the top X rows by wrapping 
 
 Some common examples of these widgets include:  
 
-* Plotly (used in this handbook page and in the [Interative plots](interactive_plots.qmd) page)
-* visNetwork (used in the [Transmission Chains](transmission_chains.qmd) page of this handbook)  
-* Leaflet (used in the [GIS Basics](gis.qmd) page of this handbook)  
-* dygraphs (useful for interactively showing time series data)  
-* DT (`datatable()`) (used to show dynamic tables with filter, sort, etc.)  
+* Plotly (used in this handbook page and in the [Interative plots](interactive_plots.qmd) page).
+* visNetwork (used in the [Transmission Chains](transmission_chains.qmd) page of this handbook).  
+* Leaflet (used in the [GIS Basics](gis.qmd) page of this handbook).  
+* dygraphs (useful for interactively showing time series data).  
+* DT (`datatable()`) (used to show dynamic tables with filter, sort, etc.).  
 
 The `ggplotly()` function from **plotly** is particularly easy to use. See the [Interactive plots](interactive_plots.qmd) page. 
 
@@ -794,9 +825,9 @@ The `ggplotly()` function from **plotly** is particularly easy to use. See the [
 
 Further information can be found via:
 
-* https://bookdown.org/yihui/rmarkdown/
-* https://rmarkdown.rstudio.com/articles_intro.html
+* [R Markdown: The Definitive Guide](https://bookdown.org/yihui/rmarkdown/)
+* [Introduction to R Markdown](https://rmarkdown.rstudio.com/articles_intro.html)
 
-A good explainer of markdown vs knitr vs Rmarkdown is here: https://stackoverflow.com/questions/40563479/relationship-between-r-markdown-knitr-pandoc-and-bookdown
-
+A good explainer of Markdown vs knitr vs R Markdown can be found [here](https://stackoverflow.com/questions/40563479/relationship-between-r-markdown-knitr-pandoc-and-bookdown
+).
 
