--- a/new_pages/tables_descriptive.qmd
+++ b/new_pages/tables_descriptive.qmd
@@ -894,8 +894,8 @@ Adjust how missing values are displayed. The default is "Unknown".
 **`type = `**  
 This is used to adjust how many levels of the statistics are shown. The syntax is similar to `statistic = ` in that you provide an equation with columns on the left and a value on the right. Two common scenarios include:  
 
-* `type = all_categorical() ~ "categorical"` Forces dichotomous columns (e.g. `fever` yes/no) to show all levels instead of only the “yes” row  
-* `type = all_continuous() ~ "continuous2"` Allows multi-line statistics per variable, as shown in a later section  
+* `type = all_categorical() ~ "categorical"` Forces dichotomous columns (e.g. `fever` yes/no) to show all levels instead of only the “yes” row. 
+* `type = all_continuous() ~ "continuous2"` Allows multi-line statistics per variable, as shown in a later section.  
 
 In the example below, each of these arguments is used to modify the original summary table:  
 
@@ -909,7 +909,6 @@ linelist %>%
     digits = all_continuous() ~ 1,                              # rounding for continuous columns
     type   = all_categorical() ~ "categorical",                 # force all categorical levels to display
     label  = list(                                              # display labels for column names
-      outcome   ~ "Outcome",                           
       age_years ~ "Age (years)",
       gender    ~ "Gender",
       temp      ~ "Temperature",
